--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-imask": "^7.6.1",
+    "react-input-mask": "^2.0.4",
     "yup": "^1.7.0"
   },
   "devDependencies": {
